syntax = "proto3";

package user;

option go_package = "./proto";

// UserService
// provides a complete set of CRUD (Create, Read, Update, Delete) operations
// for managing user entities in the system.
service UserService {
  // CreateUser 
  // creates a new user in the system with the provided information.
  // Returns the created user with system-generated fields (id, timestamps) populated.
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  
  // GetUser
  // retrieves a specific user by their unique identifier.
  // Returns the user details if found, otherwise returns an error.
  rpc GetUser(GetUserRequest) returns (UserResponse);
  
  // UpdateUser
  // modifies an existing user's information.
  // All provided fields will be updated; omitted fields may be preserved or set to default values
  // depending on implementation. Returns the updated user record.
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  
  // DeleteUser
  // removes a user from the system by their unique identifier.
  // Returns a success status indicating whether the deletion was completed.
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  
  // ListUsers
  // retrieves a paginated list of users from the system.
  // Useful for browsing users with support for pagination controls.
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// User represents a person in the system with their core attributes and metadata.
message User {
  // id is the unique identifier for the user, typically generated by the system.
  string id = 1;
  
  // name is the full name of the user.
  string name = 2;
  
  // email is the user's email address, used for communication and authentication.
  string email = 3;
  
  // age is the user's age in years. Must be a non-negative integer.
  int32 age = 4;
  
  // created_at is the timestamp when the user was created (ISO 8601 format recommended).
  string created_at = 5;
  
  // updated_at is the timestamp when the user was last updated (ISO 8601 format recommended).
  string updated_at = 6;
}

// CreateUserRequest contains the information needed to create a new user.
message CreateUserRequest {
  // name is the full name of the user to create. Required field.
  string name = 1;
  
  // email is the email address of the user to create. Required field.
  string email = 2;
  
  // age is the age of the user to create. Must be a non-negative integer.
  int32 age = 3;
}

// GetUserRequest contains the identifier to retrieve a specific user.
message GetUserRequest {
  // id is the unique identifier of the user to retrieve. Required field.
  string id = 1;
}

// UpdateUserRequest contains the information to update an existing user.
message UpdateUserRequest {
  // id is the unique identifier of the user to update. Required field.
  string id = 1;
  
  // name is the new name for the user. If empty, the existing name may be preserved.
  string name = 2;
  
  // email is the new email address for the user. If empty, the existing email may be preserved.
  string email = 3;
  
  // age is the new age for the user. If zero, the existing age may be preserved.
  int32 age = 4;
}

// DeleteUserRequest contains the identifier to delete a specific user.
message DeleteUserRequest {
  // id is the unique identifier of the user to delete. Required field.
  string id = 1;
}

// DeleteUserResponse indicates the result of a delete operation.
message DeleteUserResponse {
  // success is true if the user was successfully deleted, false otherwise.
  bool success = 1;
}

// ListUsersRequest contains pagination parameters for listing users.
message ListUsersRequest {
  // page is the page number to retrieve (1-based indexing). Defaults to 1 if not specified.
  int32 page = 1;
  
  // limit is the maximum number of users to return per page. Defaults to a system-defined value if not specified.
  int32 limit = 2;
}

// ListUsersResponse contains a paginated list of users and pagination metadata.
message ListUsersResponse {
  // users is the list of user records for the current page.
  repeated User users = 1;
  
  // total is the total number of users available across all pages.
  int32 total = 2;
  
  // page is the current page number returned in this response.
  int32 page = 3;
  
  // limit is the page size used for this response.
  int32 limit = 4;
}

// UserResponse wraps a single user entity, used as return type for operations that return a single user.
message UserResponse {
  // user contains the user data returned by the operation.
  User user = 1;
}